# Paynode-Aggregator

./: Cargo.toml  README.md  create-project.sh  docker-compose.yml  tmp_mermaid.mmd
docs/: architecture.md  dev-setup.md  roadmap.md  settlement.md
paynode/: .env.example  Cargo.toml  README.md  docker-compose.yml  paynode.sln  show-tree.sh
paynode/docs/: ai-routing.md  architecture.md  governance.md  provider-spec.md
paynode/services/analytics-service/: Cargo.toml
paynode/services/analytics-service/src/: main.rs
paynode/services/api-gateway/: Cargo.toml
paynode/services/balance-service/: Cargo.toml
paynode/services/blockchain-indexer/src/: main.rs
paynode/services/order-service/: Cargo.toml
paynode/services/provider-service/: Cargo.toml
paynode/services/provider-service/src/: main.rs
paynode/services/settlement-service/: Cargo.toml
paynode/services/settlement-service/src/: main.rs
paynode/shared/database/: Cargo.toml  README.md
paynode/shared/database/src/: error.rs  lib.rs
paynode/shared/database/src/models/: mod.rs
paynode/shared/database/src/repositories/: mod.rs  orders.rs
paynode/shared/messaging/: Cargo.toml
paynode/shared/messaging/src/: lib.rs
paynode/shared/types/: Cargo.toml
services/ai-router/: Cargo.toml
services/ai-router/src/: main.rs
services/api-gateway/src/: main.rs
services/balance-service/src/: main.rs
services/blockchain-indexer/: Cargo.toml
services/order-service/src/: main.rs
shared/: README.md
shared/database/: .env  Cargo.toml  README.md
shared/database/.sqlx/: query-85372f3af20bc09be09887b85d5e06943bf48476ea15fe607e28171e8e36c5e3.json
shared/database/migrations/: 0001_create_orders_table.sql  001_initial_schema.sql
shared/database/src/: error.rs  lib.rs  main.rs  pool.rs
shared/database/src/models/: order.rs  proposal.rs  provider.rs
shared/database/src/repositories/: orders.rs  proposals.rs  providers.rs
shared/types/: Cargo.toml
shared/types/src/: enums.rs  error.rs  lib.rs  order.rs  payment.rs  proposal.rs  provider.rs  reputation.rs
shared/utils/: Cargo.toml
shared/utils/src/: lib.rs
