[package]
name = "ai-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
shared-types = { path = "../../shared/types" }
shared-messaging = { path = "../../shared/messaging" }
