[package]
name = "shared-database"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Database ---
sqlx = { version = "0.7.4", features = [
    # "runtime-tokio-native-tls",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }


# --- Async runtime ---
tokio = { version = "1.35", features = ["full"] }

# --- Utility & Error Handling ---
anyhow = "1.0"
thiserror = "1.0"

# --- Logging ---
tracing = "0.1"

# --- Serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Decimal & Formatting ---
rust_decimal = { version = "1.39", features = ["db-postgres"] }
hex = "0.4"
uuid = "1.8"
chrono = "0.4"

# --- Local Shared Types ---
shared-types = { path = "../types" }
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4"

# --- SQLx Offline Support (optional, but highly recommended) ---
[package.metadata.sqlx]
offline = true
