[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"



hex = "0.4"

# For blockchain types (Address, H256, U256)
ethers = { version = "2.0", optional = true }




[features]
default = []
blockchain = ["ethers"]  # Enable when you need blockchain types